@@ -49,6 +49,7 @@
    - ofaIExeCloseClose interface is renamed to ofaIExeClose (todo #1067).
    - ofaIPrefsProvider, ofaIPrefsPage: deprecated interfaces.
    - ofaIProperties: new interface which obsoletes both ofaIPrefsProvider and ofaIPrefsPage.
+   - ofsBat: deprecated data structure.
 
 -----------------------------------------------------------------------
  Version 0.53
